# src/router/index.router.js
@@ -1,6 +1,4 @@
 import express from "express";
-const IndexRouter = express.Router();
-
 import authRouter from "./auth.router.js";
 import userRouter from "./user.router.js";
 import postRouter from "./post.router.js";
@@ -9,16 +7,14 @@ import likeRouter from "./likes.router.js";
 import followerRouter from "./follower.router.js";
 import viewRouter from "./views.router.js";
 
+const IndexRouter = express.Router();
 IndexRouter.use("/auth", authRouter);
-IndexRouter.use("/user", userRouter);   
+IndexRouter.use("/user", userRouter);
 IndexRouter.use("/post", postRouter);
 IndexRouter.use("/comments", commentRouter);
 
 IndexRouter.use("/likes", likeRouter);
-IndexRouter.use("/follower", followerRouter);   
+IndexRouter.use("/follower", followerRouter);
 IndexRouter.use("/view", viewRouter);
-
-
-
 
 export default IndexRouter;
